# logic-lab

./: .gitignore  Cargo.toml
src/: bdd.rs  binary_decision_diagram.rs  lib.rs  main.rs
src/formula/: and.rs  atom.rs  expression.rs  in_brackets.rs  mod.rs  not.rs  or.rs
